# Axioma

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/Axioma/: Vector3.ixx
